--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java Development Portfolio</title>
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/GokanZin/meu-portfolio/main/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <style>
 :root {
