--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ body {
       <div class="about-grid">
         <div class="about-photo">
           <div class="photo-placeholder">
-            <img src=".img/gokan" alt="minhfoto"/>
+            <img src="img/gokan.png" alt="minhfoto"/>
           </div>
         </div>
         <div class="about-content">
