--- a/index.html
+++ b/index.html
@@ -643,9 +643,9 @@ body {
     <script>
         const items = [
     {
-      title: "Plugin teste",
+      title: "Plugin mClasse(1.12.2)",
       tags: ["MySQL", "SQLite", "Spigot"],
-      video: "https://www.youtube.com/embed/YoNpgc9lz2o"
+      video: "https://www.youtube.com/embed/cJFlNaoP1PU"
     },
     {
       title: "Outro Plugin",
