--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="about-grid">
         <div class="about-photo">
           <div class="photo-placeholder">
-            <img src=".img/gokan.png" alt="minhfoto"/>
+            <img src="./img/gokan.png" alt="minhfoto"/>
           </div>
         </div>
         <div class="about-content">
