--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <base href="/">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java Development Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
 </head>
     
 <body>
